apps/base/glance/release/httproute.yaml
# yaml-language-server: $schema=https://ctrl-research.github.io/k8s-schemas/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: glance-internal
spec:
  parentRefs:
  - name: envoy-internal
    namespace: network
  hostnames:
  - glance.j6n.internal
  rules:
  - backendRefs:
    - name: glance
      port: 8080
